--- a/style/index.css
+++ b/style/index.css
@@ -28,17 +28,18 @@
             
 
             /*LOG IN*/
-
-            #sign-in-form {
+            .sign-form{
                 text-align: center;
                 position: fixed;
-                width: 250px;
-                height: 260px;
-                right: 40%;
-                top: 30%;
                 background-color: hsla(0, 0%, 0%, 30%);
                 z-index: 9;
                 padding: 30px 10px 0px 10px;
+            }
+            #sign-in-form {              
+                width: 250px;
+                height: 260px;
+                left: 40%;
+                top: 30%;
             }           
             
             fieldset {
@@ -62,18 +63,26 @@
                 font-weight: bold;
                 color: white;
                 text-transform: uppercase;
-            }
-            
+            }            
             
             button:hover {
                 background-color: rgb(151, 170, 206);
                 color: black;
                 font-weight: bold;
-            }
+            }           
+
+            /*REGISTRATION*/  
             
-
-            /*REGISTRATION*/            
-
+            #sign-up-form {
+                width: 550px;
+                height: 520px;               
+                left: 30%;
+                top: 10%;               
+            }
+            .sign-up-fieldset{
+                display: flex;
+                flex-direction: column;
+            }
             #formMain {
                 display: flex;
                 flex-direction: row;
@@ -84,19 +93,7 @@
             #formRight {
                 width: 200px;
                 margin: 20px;
-            }    
-            
-            #pokupiRezervacija {
-                text-align: center;
-                position: fixed;
-                left: 20%;
-                top: 10%;
-                z-index: 9;
-                background-color: transparent;
-                padding: 10px;
-            }
-          
-            
+            }        
             
             /* NAVIGATION */
             
@@ -121,17 +118,13 @@
                 transform: scale(1.2);
             } 
            
-            /*RESPONSIVE*/
+            /*RESPONSIVE*/           
             
-            @media screen and (max-width: 1000px) {
-                #pokupiRezervacija {
-                    left: 10%;
-                }
-            }
-            
-            @media screen and (max-width: 750px) {
-                #sign-in-form{
-                    right: 0%;
+            @media screen and (max-width: 800px) {
+                
+                #sign-in-form,
+                #sign-up-form{
+                    left: 0%;
                     top: 10%;
                     width: 100%;
                     height: 700px;
@@ -139,21 +132,33 @@
                 }
                 input{
                     width: 200px;
-                }
-                #pokupiRezervacija {
-                    left: 0%;
-                }
+                }                
             }
             
             @media screen and (max-width: 630px) {
                
                 #formMain {
                     flex-direction: column;
-                    justify-content: center;
+                    align-content: center;                    
                 }
-                #pokupiRezervacija {
-                    top: 0%;
-                    left: 20%;
+               
+                input{
+                    height: 22px;
+                }
+                
+                .buttons{
+                    margin: 0px;
+                    padding: 0px;
+                    width: 200px;
+                    
+                }
+                #sign-up-form {
+                   left: 0%;
+                   top: 10%;
+                   padding: 10% 30%;
+                }
+                .sign-up-fieldset{
+                    font-size: 10px;
                 }
                 #formLeft,
                 #formRight {
@@ -161,7 +166,9 @@
                 }
             }
             @media screen and (max-width: 420px){
-               
+                #sign-up-form {
+                    
+                 }
             }
             /*FOOTER*/
             
