--- a/style/index.css
+++ b/style/index.css
@@ -124,7 +124,7 @@
                 
                 #sign-in-form,
                 #sign-up-form{
-                    left: 0%;
+                    left: -3%;
                     top: 10%;
                     width: 100%;
                     height: 700px;
@@ -136,8 +136,24 @@
             }
             
             @media screen and (max-width: 630px) {
-               
-                #formMain {
+
+                #sign-up-form input{
+                    width: 125px;
+                    height: 20px;
+                }
+                #sign-up-form input[type = "button"]{
+                    width: 185px;
+                    height: 27px;
+                }
+                .sign-up-fieldset{
+                    font-size: 10px;
+                }
+                #formLeft,
+                #formRight {
+                    width: 140px;
+                    margin: 5px;
+                } 
+               /* #formMain {
                     flex-direction: column;
                     align-content: center;                    
                 }
@@ -163,7 +179,7 @@
                 #formLeft,
                 #formRight {
                     margin: 0%;
-                }
+                }*/
             }
             @media screen and (max-width: 420px){
                 #sign-up-form {
