--- a/view/start.html
+++ b/view/start.html
@@ -7,8 +7,7 @@
     <title>Start</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" type="text/css" media="screen" href="../style/main.css" />
-    
+    <link rel="stylesheet" type="text/css" media="screen" href="../style/main.css" />    
 </head>
 
 <body>
@@ -27,15 +26,9 @@
         <a id="signOut" href="../index.html" onclick="signOut()">Sign Out</a>
     </div>
 
-
     <header class="zaglavlje" id="zaglavljeHome">
         <div id="message"></div>
-
-        
-
-            <form class="chooseDestination">      
-                
-               
+            <form class="chooseDestination">                 
                 <select class="nameCountry" >       
                         <option value="1">Srbija</option>
                         <option value="2">Grcka</option>
@@ -43,8 +36,6 @@
                         <option value="4">USA</option>
                         </select>
                         <br>
-                        
-               <!-- <input list="nameCity" id="city" name="nameCity"><br>-->
                 <select class="nameCity" >
                             <option value="1">Belgrade</option>
                             <option value="2">Thesaloniki</option>
@@ -53,24 +44,14 @@
                         </select>
                 <br>
                 <button onclick="chooseDestination()">Select</button>
-
             </form>
-       
-
-
     </header>
-
-
-
-
 
     <footer id="podnozje">
         <p>Beograd, Milutina Milankovica 1, 011-111-1111</p>
     </footer>
 
-    <script src="js/nav.js"></script>
-    <script src="js/main.js"></script>
-    <script src="js/signout.js"></script>
+    <script src="../js/main.js"></script>
     <script>
     </script>
 </body>
