--- a/view/start.html
+++ b/view/start.html
@@ -13,7 +13,7 @@
 <body>
     <!--TOPNAV-->
 
-    <div class="topnav" id="myTopnav">
+    <div class="top-nav" id="my-top-nav">
         <a id="home" class="active" href="#">Home</a>
         <a id="lokacija" href="life.html">Life ...</a>
         <a id="kontakt" href="accommodation.html">Accommodation</a>
@@ -26,9 +26,9 @@
         <a id="signOut" href="../index.html" onclick="signOut()">Sign Out</a>
     </div>
 
-    <header class="zaglavlje" id="zaglavljeHome">
+    <header class="header" id="header-home">
         <div id="message"></div>
-            <form class="chooseDestination">                 
+            <form class="choose-destination">                 
                 <select class="nameCountry" >       
                         <option value="1">Srbija</option>
                         <option value="2">Grcka</option>
@@ -43,7 +43,7 @@
                             <option value="4">Moskow</option>
                         </select>
                 <br>
-                <button onclick="chooseDestination()">Select</button>
+                <button id="choose-destination">Select</button>
             </form>
     </header>
 
