--- a/style/main.css
+++ b/style/main.css
@@ -14,7 +14,7 @@ html {
     padding: 0%;
 }
 /*-----------HEADER-----*/
-.zaglavlje {
+.header {
     background-repeat: no-repeat;
     background-size: cover;   
     padding: Spx;
@@ -26,17 +26,16 @@ html {
     font-size: 15px;
     font-weight: bold;
     position: relative;
-    left: 30%;
+    right: 0%;
     padding: 10px;
-    text-shadow: black 2px 2px 2px;
-            transform: scale(1.2);
+    transform: scale(1.2);
 }
 
 /*-------HOME-----*/
 
 /*HEADER*/
 
-#zaglavljeHome {
+#header-home {
     background-image: url("../images/metropolis.jpg");
     background-position: center;    
     height: 100%;
@@ -94,59 +93,54 @@ html {
         color: white;
         text-decoration: none;       
     } 
-    .topnav {
+    .top-nav {
         overflow: hidden;
         background-color: black;
         transition: transform .2s;
     }    
-    .topnav a {
+    .top-nav a {
         float: left;
-        display: block;
-        color: white;
+        display: block;       
         text-align: center;
         padding: 20px;
-        text-decoration: none;
         text-transform: uppercase;
     }
     
-    .topnav a:hover {
+    .top-nav a:hover {
         text-shadow: black 2px 2px 2px;
         transform: scale(1.1);
     }
     
     .active {
-        background-color: gray;
-        color: chocolate;
+        background-color: slategray;
+        color: wheat;
         height: 65px;
     }
     
-    .topnav .icon {
+    .top-nav .icon {
         display: none;
         text-align: center;
     }
     
     
-    /*RESPONSIVE*/
-    
-   
-    
+    /*RESPONSIVE*/    
     @media screen and (max-width: 1000px) {
-        .topnav a:not(:first-child) {
+        .top-nav a:not(:first-child) {
             display: none;
         }
-        .topnav a.icon {
+        .top-nav a.icon {
             float: right;
             display: block;
         }
-        .topnav.responsive {
+        .top-nav.responsive {
             position: relative;
         }
-        .topnav.responsive .icon {
+        .top-nav.responsive .icon {
             position: absolute;
             right: 0;
             top: 0;
         }
-        .topnav.responsive a {
+        .top-nav.responsive a {
             float: none;
             display: block;
             text-align: center;
@@ -337,7 +331,7 @@ width: 50%;
     padding: 5px;
 }
 
-.chooseDestination {
+.choose-destination {
     position: absolute;
     top: 40%;
     left: 30%;
