--- a/style/main.css
+++ b/style/main.css
@@ -123,29 +123,6 @@ html {
     }
     
     
-    /*RESPONSIVE*/    
-    @media screen and (max-width: 1000px) {
-        .top-nav a:not(:first-child) {
-            display: none;
-        }
-        .top-nav a.icon {
-            float: right;
-            display: block;
-        }
-        .top-nav.responsive {
-            position: relative;
-        }
-        .top-nav.responsive .icon {
-            position: absolute;
-            right: 0;
-            top: 0;
-        }
-        .top-nav.responsive a {
-            float: none;
-            display: block;
-            text-align: center;
-        }
-    }
     
     /*OMOTAC*/    
     
@@ -334,7 +311,7 @@ width: 50%;
 .choose-destination {
     position: absolute;
     top: 40%;
-    left: 30%;
+    left: 39%;
     font-size: 20px;
     font-weight: bold;
     background-color:transparent;
@@ -356,3 +333,44 @@ width: 50%;
         text-align: center;
         padding: 1% 3%;
     }
+/*RESPONSIVE*/    
+@media screen and (max-width: 1000px) {
+    .top-nav a:not(:first-child) {
+        display: none;
+    }
+    .top-nav a.icon {
+        float: right;
+        display: block;
+    }
+    .top-nav.responsive {
+        position: relative;
+    }
+    .top-nav.responsive .icon {
+        position: absolute;
+        right: 0;
+        top: 0;
+    }
+    .top-nav.responsive a {
+        float: none;
+        display: block;
+        text-align: center;
+    }
+    .choose-destination {
+        left: 35%;
+    }
+}
+@media screen and (max-width: 800px){
+    .choose-destination {
+        left: 30%;
+    }
+}
+@media screen and (max-width: 650px){
+    .choose-destination {
+        left: 25%;
+    }
+}
+@media screen and (max-width: 500px){
+    .choose-destination {
+        left: 20%;
+    }
+}
