--- a/view/start.html
+++ b/view/start.html
@@ -15,7 +15,7 @@
 
     <div class="top-nav" id="my-top-nav">
         <a id="home" class="active" href="#">Home</a>
-        <a id="lokacija" href="life.html">Life ...</a>
+        <a id="location" href="../view/life.html">Life ...</a>
         <a id="kontakt" href="accommodation.html">Accommodation</a>
         <a id="galerija" href="enjoy.html">Enjoy ...</a>
         <a id="feedback" href="feedback.html">Feedbacks</a>
