life html updated
Added images to life.html

--- a/view/life.html
+++ b/view/life.html
@@ -59,7 +59,7 @@
 
             <figure>
                 <a href="#transport">
-                <img src="pictures/img26.jpg" onclick="showLocalTransport()" alt="space">
+                <img src="../images/astronaut.jpg" onclick="showLocalTransport()" alt="space">
                 <p>Local transport</p></a>
 
             </figure>
@@ -67,26 +67,26 @@
 
             <figure>
                 <a href="#food">
-                <img src="pictures/img10.jpg" onclick="showFood()" alt="food">
+                <img src="../images/breakfast.jpg" onclick="showFood()" alt="food">
                 <p>Food & Entertainment</p></a>
 
             </figure>
 
             <figure>
                 <a href="#safety">
-                <img src="pictures/img23.jpeg" onclick="showSafety()" alt="hands">
+                <img src="../images/friends.jpeg" onclick="showSafety()" alt="hands">
                 <p>Safety</p></a>
 
             </figure>
             <figure>
                 <a href="#culture">
-                <img src="pictures/img9.jpg" onclick="showLocalCulture()" alt="earth">
+                <img src="../images/world.jpg" onclick="showLocalCulture()" alt="earth">
                 <p>Local culture</p>
                     </a>
             </figure>
             <figure>
                 <a href="#airport">
-                <img src="pictures/img7.jpg" onclick="showAirport()" alt="airplane">
+                <img src="../images/airplane.jpg" onclick="showAirport()" alt="airplane">
                 <p>Airport</p></a>
 
             </figure>
@@ -112,7 +112,7 @@
                     <div class="userComment">
                         <form>
                             <div class="provider">
-                                <img class="providerLogo" src="pictures/logoavio1.png">
+                                <img class="providerLogo" src="../images/logoavio1.png">
                                 <h2>Add feedback about AirSerbia</h2>
                                 <div>
                                     <span class="heading">User Rating</span>
@@ -185,7 +185,7 @@
 
             <div class="comment" id="comment1">
                 <div class="user">
-                    <img class="userImage" src="pictures/img24.jpeg" alt="user">
+                    <img class="userImage" src="../images/traveler.jpeg" alt="user">
 
                     <p>Author: Pera Peric</p>
                     <p>Date:01.01.2013</p>
@@ -214,7 +214,7 @@
             </div>
             <div class="comment" id="comment2">
                 <div class="user">
-                    <img class="userImage" src="pictures/img24.jpeg" alt="user">
+                    <img class="userImage" src="../images/traveler.jpeg" alt="user">
 
                     <p>Author: Dusko Dugousko</p>
                     <p>Date:02.02.2019</p>
@@ -242,7 +242,7 @@
 
             <div class="comment" id="comment3">
                 <div class="user">
-                    <img class="userImage" src="pictures/img24.jpeg" alt="user">
+                    <img class="userImage" src="../images/traveler.jpeg" alt="user">
 
                     <p>Author: Marko Markovic</p>
                     <p>Date:03.03.2003</p>
