--- a/view/start.html
+++ b/view/start.html
@@ -14,12 +14,12 @@
     <!--TOPNAV-->
 
     <div class="top-nav" id="my-top-nav">
-        <a id="home" class="active" href="#">Home</a>
-        <a id="location" href="../view/life.html">Life ...</a>
-        <a id="kontakt" href="accommodation.html">Accommodation</a>
-        <a id="galerija" href="enjoy.html">Enjoy ...</a>
-        <a id="feedback" href="feedback.html">Feedbacks</a>
-        <a id="providers" href="providers.html">Providers</a>
+        <a class="active" href="#">Home</a>
+        <a href="../view/life.html">Life ...</a>
+        <a href="accommodation.html">Accommodation</a>
+        <a href="enjoy.html">Enjoy ...</a>
+        <a href="feedback.html">Feedbacks</a>
+        <a href="providers.html">Providers</a>
         <a href="javascript:void(0);" class="icon" onclick="nav()">
             <i class="fa fa-bars"></i>
         </a>
