--- a/view/start.html
+++ b/view/start.html
@@ -19,7 +19,7 @@
         <a href="accommodation.html">Accommodation</a>
         <a href="enjoy.html">Enjoy ...</a>
         <a href="feedback.html">Feedbacks</a>
-        <a href="providers.html">Providers</a>
+        <a id="providers" href="providers.html">Providers</a>
         <a href="javascript:void(0);" class="icon" onclick="nav()">
             <i class="fa fa-bars"></i>
         </a>
