--- a/view/life.html
+++ b/view/life.html
@@ -178,7 +178,6 @@
                                     viverra dolor, ac efficitur libero commodo ac. Nam venenatis sodales sollicitudin. Interdum et malesuada fames ac ante ipsum primis in faucibus. Duis sed libero et purus feugiat blandit. Cras egestas lectus sit amet faucibus
                                     maximus. Proin non nulla lectus.
                                 </p>
-
                             </div>
                             <div class="range">
                                 <div>
@@ -190,7 +189,8 @@
                                     <span class="fa fa-star"></span>
                                 </div>
                                 <br><br>
-                                <input type="checkbox"> Choose comment
+                                <input type="checkbox"> 
+                                <span>Choose comment</span>
                             </div>
                         </div>
                         <div class="comment" id="comment2">
@@ -215,7 +215,8 @@
                                     <span class="fa fa-star"></span>
                                 </div>
                                 <br><br>
-                                <input type="checkbox"> Choose comment
+                                <input type="checkbox">
+                                <span>Choose comment</span>
                             </div>
                         </div>
                         <div class="comment" id="comment3">
@@ -240,7 +241,8 @@
                                     <span class="fa fa-star"></span>
                                 </div>
                                 <br><br>
-                                <input type="checkbox"> Choose comment
+                                <input type="checkbox">
+                                <span>Choose comment</span>
                             </div>
                         </div>
                         <button>Delete comment</button>
