--- a/style/main.css
+++ b/style/main.css
@@ -277,15 +277,26 @@ width: 50%;
     width: 50px;
     height: 50px;
 }
-
+.user{
+    padding: 5px;
+}
 .textComment {
     width: 50%;
+    padding: 5px;
+}
+.textComment h2 {
+    padding: 5px;
+}
+input[type="checkbox"]{
+    width: 15px;
+}
+.range{
+    padding: 5px;
 }
 
 .fa {
-    font-size: 25px;
+    font-size: 20px;
 }
-
 .checked {
     color: darkcyan;
 }
@@ -369,6 +380,12 @@ width: 50%;
 @media screen and (max-width: 800px){
     .choose-destination {
         left: 30%;
+    }
+    .comment{
+        flex-direction: column;
+    }
+    .textComment{
+        width: 100%;
     }
 }
 @media screen and (max-width: 650px){
