life range style

--- a/view/life.html
+++ b/view/life.html
@@ -120,7 +120,7 @@
                                 <textarea  rows="10" placeholder="Place for your comment..."></textarea>
                                 <br>
                                 <p class="message-range">Click for range</p>
-                                <div>
+                                <div class="range">
                                     5 star 
                                     <input type="radio" name="starRange" value="5">
                                     <span class="fa fa-star checked" checked></span>
@@ -129,28 +129,28 @@
                                     <span class="fa fa-star checked"></span>
                                     <span class="fa fa-star checked"></span>    
                                 </div>
-                                <div>
-                                    4 star 
+                                <div class="range">
+                                    <label>4 star </label>
                                     <input type="radio" name="starRange" value="4">
                                     <span class="fa fa-star checked"></span>
                                     <span class="fa fa-star checked"></span>
                                     <span class="fa fa-star checked"></span>
                                     <span class="fa fa-star checked"></span>    
                                 </div>
-                                <div>
-                                    3 star 
+                                <div class="range">
+                                    <span>3 star </span>
                                     <input type="radio" name="starRange" value="3">
                                     <span class="fa fa-star checked"></span>
                                     <span class="fa fa-star checked"></span>
                                     <span class="fa fa-star checked"></span>    
                                 </div>
-                                <div>
+                                <div class="range">
                                     2 star 
                                     <input type="radio" name="starRange" value="2">
                                     <span class="fa fa-star checked"></span>
                                     <span class="fa fa-star checked"></span>    
                                 </div>
-                                <div>
+                                <div class="range">
                                     1 star 
                                     <input type="radio" name="starRange" value="1">
                                     <span class="fa fa-star checked"></span>    
