--- a/style/main.css
+++ b/style/main.css
@@ -292,7 +292,8 @@ width: 50%;
 .text-comment h2 {
     padding: 0px 0px 15px 0px;
 }
-input[type="checkbox"]{
+input[type="checkbox"],
+input[type="radio"] {
     width: 15px;
 }
 .range{
