--- a/view/life.html
+++ b/view/life.html
@@ -15,9 +15,9 @@
         <div id="message"></div>
         <form class="choose-city">
          <select class="nameCountry" >       
-                            <option value="1">Srbija</option>
-                            <option value="2">Grcka</option>
-                            <option value="3">Rusija</option>
+                            <option value="1">Serbia</option>
+                            <option value="2">Greece</option>
+                            <option value="3">Russia</option>
                             <option value="4">USA</option>
                             </select>
                     <br> 
@@ -26,10 +26,10 @@
                                 <option value="1">Belgrade</option>
                                 <option value="2">Thesaloniki</option>
                                 <option value="3">Chicago</option>
-                                <option value="4">Moskow</option>
+                                <option value="4">Moscow</option>
                             </select>
                     <br>
-                    <button id="choose-destination">Select</button>
+                    <button class="choose-destination-button">Select</button>
         </form>          
     </header>
 
@@ -38,7 +38,7 @@
     <div class="top-nav" id="my-top-nav">
         <a href="./start.html">Start</a>
         <a class="active" href="#">Life ...</a>
-        <a href="accommodation.html">Accommodation</a>
+        <a href="./accommodation.html">Accommodation</a>
         <a href="enjoy.html">Enjoy ...</a>
         <a href="feedback.html">Feedbacks</a>
         <a id="providers" href="providers.html">Providers</a>
@@ -115,7 +115,7 @@
                                 </div>
                                 Header:
                                 <br>
-                                <textarea  rows="1" id="commentHeader" placeholder="Try to describe your range"></textarea> <br> Comment:
+                                <textarea  rows="1" id="comment-header" placeholder="Try to describe your range"></textarea> <br> Comment:
                                 <br>
                                 <textarea  rows="10" placeholder="Place for your comment..."></textarea>
                                 <br>
