--- a/view/start.html
+++ b/view/start.html
@@ -15,8 +15,8 @@
 
     <div class="top-nav" id="my-top-nav">
         <a class="active" href="#">Home</a>
-        <a href="../view/life.html">Life ...</a>
-        <a href="accommodation.html">Accommodation</a>
+        <a href="./life.html">Life ...</a>
+        <a href="./accommodation.html">Accommodation</a>
         <a href="enjoy.html">Enjoy ...</a>
         <a href="feedback.html">Feedbacks</a>
         <a id="providers" href="providers.html">Providers</a>
@@ -30,9 +30,9 @@
         <div id="message"></div>
             <form class="choose-destination">                 
                 <select class="nameCountry" >       
-                        <option value="1">Srbija</option>
-                        <option value="2">Grcka</option>
-                        <option value="3">Rusija</option>
+                        <option value="1">Serbia</option>
+                        <option value="2">Greece</option>
+                        <option value="3">Russia</option>
                         <option value="4">USA</option>
                         </select>
                         <br>
@@ -40,10 +40,10 @@
                             <option value="1">Belgrade</option>
                             <option value="2">Thesaloniki</option>
                             <option value="3">Chicago</option>
-                            <option value="4">Moskow</option>
+                            <option value="4">Moscow</option>
                         </select>
                 <br>
-                <button id="choose-destination">Select</button>
+                <button class="choose-destination-button">Select</button>
             </form>
     </header>
 
